# comp-evol

./: .gitignore  README.md
00/: mealpy_setup.py
trabalho-2/: 03.py  analise.py  main.py
trabalho-2/results/: result_0_SHADE_10_f3.txt  result_CleverBookBeesA_10_f3.txt  result_CleverBookBeesA_10_f3_treated.txt  result_CleverBookBeesA_10_f4.txt  result_CleverBookBeesA_10_f5.txt  (+38 more)
trabalho-3/: CMakeLists.txt  config.h  config.h.in  getting_started.cpp
trabalho-3/c++/: CMakeLists.txt  config.h  main.cpp
trabalho-3/cpp/: config.h  main.cpp
trabalho-3/cpp/tsp/: tsp.cpp
trabalho-3/graph/: graph.cpp
trabalho-3/python/: .gitignore  main.py  matrix.py  tsp.py
trabalho-3/python/matrices/: berlin52.txt  br17.txt  ch130.txt  ftv70.txt
trabalho-3/python/results/: result_BaseDE_130_ch130.txt  result_BaseDE_17_br17.txt  result_BaseDE_52_berlin52.txt  result_BaseDE_71_ftv70.txt  result_C_PSO_130_ch130.txt  result_C_PSO_17_br17.txt  result_C_PSO_52_berlin52.txt  result_C_PSO_71_ftv70.txt  result_EliteSingleGA_130_ch130.txt  result_EliteSingleGA_17_br17.txt  result_EliteSingleGA_52_berlin52.txt  result_EliteSingleGA_71_ftv70.txt  result_SADE_130_ch130.txt  result_SHADE_130_ch130.txt  result_SHADE_17_br17.txt  result_SHADE_52_berlin52.txt  result_SHADE_71_ftv70.txt
trabalho-3/tsp/: tsp.cpp
trabalho-4/: .gitignore  CMakeLists.txt  README.md  execute.bat  execute.sh
trabalho-4/include/: config.h  config.h.in  de.h  utils.h
trabalho-4/instances/Difficult_Instances/ANI/: 1002_80000_NR_26.txt  1002_80000_NR_28.txt  1002_80000_NR_29.txt  1002_80000_NR_31.txt  1002_80000_NR_34.txt  1002_80000_NR_35.txt  1002_80000_NR_37.txt  1002_80000_NR_40.txt  1002_80000_NR_47.txt  1002_80000_NR_49.txt
trabalho-4/output/: 1002_80000_DI_0_results.txt  402_10000_NR_10_results.txt  Falkenauer_t120_01_results.txt  Falkenauer_t249_01_results.txt  Falkenauer_t60_00_results.txt  Falkenauer_u1000_00_results.txt  HARD1_results.txt  N1W1B1R0_results.txt
trabalho-4/output/Augmented IRUP Instances/: 201_2500_DI_0_results.txt  402_10000_DI_0_results.txt
trabalho-4/output/Augmented Non IRUP Instances/: 201_2500_NR_0_results.txt  402_10000_NR_0_results.txt  600_20000_NR_0_results.txt  801_40000_NR_0_results.txt
trabalho-4/output/Falkenauer_T/: Falkenauer_t501_00_results.txt  Falkenauer_t60_00_results.txt
trabalho-4/output/Falkenauer_U/: Falkenauer_u120_00_results.txt  Falkenauer_u250_03_results.txt  Falkenauer_u500_06_results.txt
trabalho-4/output/Scholl_1/: N1C2W1_M_results.txt
trabalho-4/output/Scholl_3/: HARD0_results.txt
trabalho-4/output/wrong_outputs/Augmented Non IRUP Instances(ERRADO)/: 201_2500_NR_0_results.txt  801_40000_NR_0_results.txt
trabalho-4/src/: CMakeLists.txt  main.cpp
