cmake_minimum_required(VERSION 3.15)
project(Comp_Evol)
set(CMAKE_CXX_STANDARD 17)
set(TBB_DIR ${TBB_DIR} "C:\\vcpkg\\packages\\tbb_x64-windows\\**")
set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "C:\\vcpkg\\installed\\x64-windows\\include\\**")
set(CMAKE_BUILD_TYPE="Release")
find_package(pagmo CONFIG REQUIRED)
add_executable(getting_started getting_started.cpp)
target_link_libraries(getting_started Pagmo::pagmo)
